# data-pro

./: README.md  SPECIFICATIONS.md  docker-compose.yml
client/: .gitignore  Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  main.tsx
server/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: c197813182e7_initial.py
server/src/: main.py
server/src/api/: router.py
server/src/api/v1/: tasks.py
server/src/core/: __init__.py  config.py  database.py
server/src/helpers/: __init__.py  constants.py  logger.py  middlewares.py
server/src/models/: __init__.py  tasks.py  utils.py
