[project]
name = "data-pro"
version = "0.1.0"
description = "Process large amounts of data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "psycopg2-binary>=2.9.10",
    "sqlmodel<1.0.0,>=0.0.24",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
